syntax = "proto3";
package model;
option go_package = "/model/pb";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  repeated Device devices = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  google.protobuf.Timestamp discardedAt = 8;
}

message Device {
  string id = 1;
  string deviceId = 2;
  string accessToken = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
  google.protobuf.Timestamp discardedAt = 6;
}

message RegisterRequest{
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse{
  string userId = 1;
}

message LoginRequest{
  string email = 1;
  string password = 2;
}

message LoginResponse{
  string userId = 1;
}

message FindUserByIdRequest {
  string id = 1;
}
